--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,18 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        path: main.out     
+        path: main.out
+  build_test:
+    runs-on: ubuntu-latest
+    container: leshiy1295/gcc_linters_valgrind
+    needs: [check]
+    steps:
+    - uses: actions/checkout@v2
+    - run: make build
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        path: main_test.out          
   test:
     runs-on: ubuntu-latest
     container: leshiy1295/gcc_linters_valgrind
